name:                hs-parse-ag
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tkemps/hs-parse-ag#readme
license:             BSD3
license-file:        LICENSE
author:              Torsten Kemps-Benedix,
maintainer:          torsten.kemps-benedix@sks-group.eu,
copyright:           2018 Torsten Kemps-Benedix,
category:            Web
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src, dist/build/
  build-depends:       base >= 4.7 && < 5, uuagc, uuagc-cabal, haskell-src-exts >= 1.20.1 && <1.21, base-unicode-symbols, data-tree-print, pretty
  exposed-modules:     Language.Haskell.AG.Objects, Language.Haskell.AG.SyntaxExt
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, StandaloneDeriving, GeneralizedNewtypeDeriving, ScopedTypeVariables

executable hs-parse-ag
  hs-source-dirs:      app, src, dist/build/
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, uuagc, uuagc-cabal, haskell-src-exts >= 1.20.1 && <1.21, hs-parse-ag, base-unicode-symbols, data-tree-print, pretty
  default-extensions:  DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, StandaloneDeriving, GeneralizedNewtypeDeriving, ScopedTypeVariables
  other-modules:       Language.Haskell.AG.Objects, Language.Haskell.AG.SyntaxExt